Added support for service, property, host_group, service_group APIs
Renamed TeamID, ServiceID, PropertyID to under the parent path to id
